manifests/inference/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"inference:aiot-inference","ingressName":"inference:inference","hostname":"inference.35.241.255.137.nip.io","path":"/","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"field.cattle.io/publicEndpoints":"[{\"addresses\":[\"35.241.255.137\"],\"port\":443,\"protocol\":\"HTTPS\",\"serviceName\":\"inference:aiot-inference\",\"ingressName\":\"inference:inference\",\"hostname\":\"inference.35.241.255.137.nip.io\",\"path\":\"/\",\"allNodes\":false}]"},"name":"aiot-inference","namespace":"inference"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"ma [...]
    name: aiot-inference
    namespace: inference
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: aiot-inference
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          instrumentation.opentelemetry.io/inject-python: "true"
          kubectl.kubernetes.io/restartedAt: "2026-04-17T04:47:47Z"
        labels:
          app: aiot-inference
      spec:
        containers:
        - env:
          - name: MLFLOW_TRACKING_URI
            value: http://mlflow-server.mlflow.svc.cluster.local:5000
          - name: MODEL_NAME
            value: maintenance-predictor
          - name: MODEL_STAGE
            value: Production
          - name: DB_HOST
            value: postgres.aiot.svc.cluster.local
          - name: DB_NAME
            value: aiot
          - name: DB_USER
            value: aiot
          - name: DB_PASSWORD
            value: aiot123
          image: 10.132.0.2:30500/aiot/aiot-python-runtime:latest
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - stat
              - /mlflow
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: inference
          ports:
          - containerPort: 8000
            protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/serve.py
            name: serve-py
            subPath: serve.py
          - mountPath: /mlflow
            name: mlflow-data
            readOnly: true
        dnsConfig:
          nameservers:
          - 10.96.0.10
          options:
          - name: ndots
            value: "5"
          searches:
          - inference.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        dnsPolicy: None
        nodeSelector:
          kubernetes.io/hostname: oci-test-node1
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: dedicated
          operator: Equal
          value: ml-training
        volumes:
        - configMap:
            defaultMode: 420
            name: serve-py
          name: serve-py
        - name: mlflow-data
          persistentVolumeClaim:
            claimName: mlflow-artifacts-lp
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-19T21:41:57Z"
      lastUpdateTime: "2026-04-19T21:41:57Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-04-19T21:41:14Z"
      lastUpdateTime: "2026-04-19T21:41:57Z"
      message: ReplicaSet "aiot-inference-6d95b58985" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
