manifests/inference/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"aiot-inference","namespace":"inference"},"spec":{"ports":[{"port":8000,"targetPort":8000}],"selector":{"app":"aiot-inference"}}}
    name: aiot-inference
    namespace: inference
  spec:
    clusterIP: 10.108.29.119
    clusterIPs:
    - 10.108.29.119
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      app: aiot-inference
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
